@@ -33,6 +33,11 @@ EmpathyContact
 
 </para>
 
+<!-- ##### ARG EmpathyContact:capabilities ##### -->
+<para>
+
+</para>
+
 <!-- ##### ARG EmpathyContact:handle ##### -->
 <para>
 
